@@ -6,3 +6,4 @@ Domain Path 8.x-1.0-beta3 , XXXX-XX-XX
 #3121607: Add domain label title configuration options like domain navigation block does
 #3122607: processOutbound is generating wrong path when entity is not available on current domain
 #3128283: Respect url language options
+#3127593: Domain path field not hidden for disallowed domains
